@@ -1,3 +1,5 @@
+- Refactor: Add RegistrationProtocol creator method
+
 32.9.3 (20-09-2021)
 - Improvement: Active students group with argument to check enrolments
 - Refactor: Add IdDocumentTypeObject creator and finder methods
